change style commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Nurture School</title>
 
-    <link rel="stylesheet" href="/style/ui/style.css">
+    <link rel="stylesheet" href="style/ui/style.css">
     <script src="main.js" defer></script>
 
     <base href="" target="_blank">
